--- a/.env.example
+++ b/.env.example
@@ -44,3 +44,5 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+API_TOTAL_PER_KASUS=http://website-pengadilan.test:800/api/total-per-kasus
